Namens- und Anschriftenfelder müssen bei Überweisungen komplett ausgefüllt sein

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -118,6 +118,7 @@ protokoll.kassenbuch.statistik.ueberweisung=Statistik nach Überweisungen erstel
 protokoll.kassenbuch.statistik.zahlart=Statistik nach Zahlungsarten erstellt: {0} - {1}
 
 rechnung.ersteller.error=Der Mitarbeitername darf nicht länger als 200 Zeichen sein.
+rechnung.kunde.error=Die Names- und Anschriftenfelder des Kunden müssen bei einer Überweisungen vollständig ausgefüllt sein.
 rechnung.posten.bezeichnung.error=Die Bezeichnung des Postens darf maximal 500 Zeichen lang sein.
 rechnung.posten.hinweis.error=Der Hinweis darf maximal 100 Zeichen lang sein.
 rechnung.posten.menge.error.max=Die Menge darf maximal 32.767 betragen.
