Kostenvoranschlag bei Reparaturaufträgen als Pflichtfeld

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -133,6 +133,7 @@ reparatur.aufgaben.error.size=Der im Feld 'Aufgaben' eingetragene Text darf nich
 reparatur.delete.success=Der Reparaturauftrag wurde erfolgreich gelöscht.
 reparatur.geraet.error.size=Der Gerätename darf nicht länger als 500 Zeichen sein.
 reparatur.geraetepsw.error.size=Der im Feld 'Gerätepasswort' eingetragene Text darf nicht länger als 50 Zeichen sein.
+reparatur.kostenvoranschlag.error.empty=Bitte geben Sie den Kostenvoranschlag an.
 reparatur.kostenvoranschlag.error.size=Der im Feld 'Kostenvoranschlag' eingetragene Text darf nicht länger als 300 Zeichen sein.
 reparatur.mitarbeiter.error.size=Der Mitarbeitername darf nicht länger als 200 Zeichen sein.
 reparatur.nummer.error.size=Die Auftragsnummer darf nicht länger als 20 Zeichen sein.
