--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,6 +90,8 @@ kassenbuch.statistik.zeitraum.bis.error=Bitte geben Sie den Rechnungszeitraum bi
 kassenbuch.statistik.zeitraum.von.error=Bitte geben Sie den Rechnungszeitraum von an.
 
 kunde.bemerkung.error=Das Bemerkungsfeld darf nicht länger als 4000 Zeichen sein.
+kunde.duplikat.error=Der gewählte Kunde und das Duplikat sind identisch. Eine Zusammenführung kann nicht durchgeführt werden.
+kunde.duplikat.success=Der gewählte Kundendatensatz (Nummer: {0}) wurde mit dem Duplikat (Nummer: {1}) zusammengeführt.
 kunde.email.error=Die E-Mail-Adresse darf nicht länger als 100 Zeichen sein.
 kunde.firmenname.error=Der Firmenname darf nicht länger als 200 Zeichen sein.
 kunde.nachname.error=Der Nachname darf nicht länger als 100 Zeichen sein.
