Seite zum Exportieren der Rechnungen eines Monats

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ einstellungen.save.success=Die Einstellungen wurden erfolgreich gespeichert.
 
 einstellungen.filiale.email.error.empty=Bitte geben Sie die E-Mail-Adresse der Filiale an.
 einstellungen.filiale.email.error.size=Die E-Mail-Adresse darf nicht länger als 100 Zeichen sein.
+einstellungen.filiale.konto.error.size=Die Kontennummer muss zwischen 0 und 9999 liegen.
 einstellungen.filiale.kuerzel.error.empty=Bitte geben Sie das Kürzel der Filiale an. Dieses wird den Auftragsnummer vorangestellt.
 einstellungen.filiale.kuerzel.error.size=Das Kürzel darf nicht länger als 3 Zeichen sein.
 einstellungen.filiale.name.error.empty=Bitte geben Sie den Namen der Filiale an.
@@ -120,6 +121,7 @@ protokoll.kassenbuch.statistik.ueberweisung=Statistik nach Überweisungen erstel
 protokoll.kassenbuch.statistik.zahlart=Statistik nach Zahlungsarten erstellt: {0} - {1}
 
 rechnung.ersteller.error=Der Mitarbeitername darf nicht länger als 200 Zeichen sein.
+rechnung.export.success=Es konnten {0} Rechnungen erfolgreich exportiert werden.
 rechnung.kunde.error=Die Names- und Anschriftenfelder des Kunden müssen bei einer Überweisungen vollständig ausgefüllt sein.
 rechnung.posten.bezeichnung.error=Die Bezeichnung des Postens darf maximal 500 Zeichen lang sein.
 rechnung.posten.hinweis.error=Der Hinweis darf maximal 100 Zeichen lang sein.
