Akademischen Titel hinterlegbar gemacht und aus Vorname/Nachname extrahiert

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,6 +90,7 @@ kassenbuch.statistik.success=Die Statistik wurde erfolgreich erstellt und im Abl
 kassenbuch.statistik.zeitraum.bis.error=Bitte geben Sie den Rechnungszeitraum bis an.
 kassenbuch.statistik.zeitraum.von.error=Bitte geben Sie den Rechnungszeitraum von an.
 
+kunde.akademischer_titel.error=Der akademische Titel darf nicht länger als 50 Zeichen sein.
 kunde.bemerkung.error=Das Bemerkungsfeld darf nicht länger als 4000 Zeichen sein.
 kunde.duplikat.error=Der gewählte Kunde und das Duplikat sind identisch. Eine Zusammenführung kann nicht durchgeführt werden.
 kunde.duplikat.success=Der gewählte Kundendatensatz (Nummer: {0}) wurde mit dem Duplikat (Nummer: {1}) zusammengeführt.
