Löschen von Kassenberichten ermöglichen

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -81,6 +81,7 @@ inventar.produkt.save.success=Die Kategorie wurde erfolgreich gespeichert.
 
 kassenbuch.ausgangsbetrag.error=Bitte geben Sie den Ausgangsbetrag an.
 kassenbuch.datum.error=Bitte geben Sie das Datum von an.
+kassenbuch.delete.success=Das Kassenbuch wurde erfolgreich gelöscht.
 kassenbuch.kassenstand.save.success=Der Kassenstand wurde erfolgreich gespeichert.
 kassenbuch.posten.betrag.error=Der Betrag darf nicht leer sein.
 kassenbuch.posten.verwendungszweck.error=Der Verwendungszweck darf nicht länger als 100 Zeichen sein.
