Ansicht zum Erstellen und Verwalten von Aufträgen erstellt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,12 @@
+auftrag.anzahlung.error.empty=Bitte geben Sie die Höhe der Anzahlung an.
+auftrag.anzahlung.error.size=Der im Feld 'Anzahlung' eingetragene Text darf nicht länger als 300 Zeichen sein.
+auftrag.beschreibung.error.size=Die Beschreibung darf nicht länger als 2000 Zeichen sein.
+auftrag.delete.success=Der Auftrag wurde erfolgreich gelöscht.
+auftrag.kosten.error.empty=Bitte geben Sie die Kosten an.
+auftrag.kosten.error.size=Der im Feld 'Kosten' eingetragene Text darf nicht länger als 300 Zeichen sein.
+auftrag.save.error=Ungültiger Auftrag.
+auftrag.save.success=Der Auftrag {0} wurde erfolgreich gespeichert.
+
 bestellliste.clear.success=Die Bestellliste wurde geleert.
 bestellliste.put.error.filiale=Die Bestellliste konnte nicht hochgeladen werden, da die Filiale des angemeldeten Benutzers nicht ermittelt werden konnte.
 bestellliste.put.error.unavailable=Der FTP-Server ist nicht erreichbar.
