Seiten zum Erstellen/Bearbeiten von Angeboten hinzugefügt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
+angebot.delete.success=Das Angebot wurde erfolgreich gelöscht.
+angebot.save.error=Ungültiges Angebot.
+angebot.save.success=Das Angebot {0} wurde erfolgreich gespeichert.
+
 auftrag.anzahlung.error.empty=Bitte geben Sie die Höhe der Anzahlung an.
 auftrag.anzahlung.error.size=Der im Feld 'Anzahlung' eingetragene Text darf nicht länger als 300 Zeichen sein.
 auftrag.beschreibung.error.size=Die Beschreibung darf nicht länger als 2000 Zeichen sein.
