Seite Bestellungen sowie dazugehörige Komponenten in Einkauf umbenannt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,11 +11,11 @@ auftrag.kosten.error.size=Der im Feld 'Kosten' eingetragene Text darf nicht län
 auftrag.save.error=Ungültiger Auftrag.
 auftrag.save.success=Der Auftrag {0} wurde erfolgreich gespeichert.
 
-bestellliste.clear.success=Die Bestellliste wurde geleert.
-bestellliste.put.error.filiale=Die Bestellliste konnte nicht hochgeladen werden, da die Filiale des angemeldeten Benutzers nicht ermittelt werden konnte.
-bestellliste.put.error.unavailable=Der FTP-Server ist nicht erreichbar.
-bestellliste.put.error.upload=Fehler bem Hochladen der Datei: {0}
-bestellliste.put.success=Die Bestelliste wurde hochgeladen auf den FTP-Server.
+einkaufsliste.clear.success=Die Einkaufsliste wurde geleert.
+einkaufsliste.put.error.filiale=Die Einkaufsliste konnte nicht hochgeladen werden, da die Filiale des angemeldeten Benutzers nicht ermittelt werden konnte.
+einkaufsliste.put.error.unavailable=Der FTP-Server ist nicht erreichbar.
+einkaufsliste.put.error.upload=Fehler bem Hochladen der Datei: {0}
+einkaufsliste.put.success=Die Einkaufsliste wurde hochgeladen auf den FTP-Server.
 
 dsgvo.info=Bitte händigen Sie dem Kunden zum Unterzeichnen die 'Einverständniserklärung in die Erhebung und Verarbeitung von Daten' aus.
 
