Seite Auftrag sowie dazugehörige Komponenten in Bestellung umbenannt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,14 +2,14 @@ angebot.delete.success=Das Angebot wurde erfolgreich gelöscht.
 angebot.save.error=Ungültiges Angebot.
 angebot.save.success=Das Angebot {0} wurde erfolgreich gespeichert.
 
-auftrag.anzahlung.error.empty=Bitte geben Sie die Höhe der Anzahlung an.
-auftrag.anzahlung.error.size=Der im Feld 'Anzahlung' eingetragene Text darf nicht länger als 300 Zeichen sein.
-auftrag.beschreibung.error.size=Die Beschreibung darf nicht länger als 2000 Zeichen sein.
-auftrag.delete.success=Der Auftrag wurde erfolgreich gelöscht.
-auftrag.kosten.error.empty=Bitte geben Sie die Kosten an.
-auftrag.kosten.error.size=Der im Feld 'Kosten' eingetragene Text darf nicht länger als 300 Zeichen sein.
-auftrag.save.error=Ungültiger Auftrag.
-auftrag.save.success=Der Auftrag {0} wurde erfolgreich gespeichert.
+bestellung.anzahlung.error.empty=Bitte geben Sie die Höhe der Anzahlung an.
+bestellung.anzahlung.error.size=Der im Feld 'Anzahlung' eingetragene Text darf nicht länger als 300 Zeichen sein.
+bestellung.beschreibung.error.size=Die Beschreibung darf nicht länger als 2000 Zeichen sein.
+bestellung.delete.success=Die Bestellung wurde erfolgreich gelöscht.
+bestellung.kosten.error.empty=Bitte geben Sie die Kosten an.
+bestellung.kosten.error.size=Der im Feld 'Kosten' eingetragene Text darf nicht länger als 300 Zeichen sein.
+bestellung.save.error=Ungültige Bestellung.
+bestellung.save.success=Die Bestellung {0} wurde erfolgreich gespeichert.
 
 einkaufsliste.clear.success=Die Einkaufsliste wurde geleert.
 einkaufsliste.put.error.filiale=Die Einkaufsliste konnte nicht hochgeladen werden, da die Filiale des angemeldeten Benutzers nicht ermittelt werden konnte.
@@ -26,7 +26,7 @@ einstellungen.save.success=Die Einstellungen wurden erfolgreich gespeichert.
 einstellungen.filiale.email.error.empty=Bitte geben Sie die E-Mail-Adresse der Filiale an.
 einstellungen.filiale.email.error.size=Die E-Mail-Adresse darf nicht länger als 100 Zeichen sein.
 einstellungen.filiale.konto.error.size=Die Kontennummer muss zwischen 0 und 9999 liegen.
-einstellungen.filiale.kuerzel.error.empty=Bitte geben Sie das Kürzel der Filiale an. Dieses wird den Auftragsnummer vorangestellt.
+einstellungen.filiale.kuerzel.error.empty=Bitte geben Sie das Kürzel der Filiale an. Dieses wird den Auftragsnummern vorangestellt.
 einstellungen.filiale.kuerzel.error.size=Das Kürzel darf nicht länger als 3 Zeichen sein.
 einstellungen.filiale.name.error.empty=Bitte geben Sie den Namen der Filiale an.
 einstellungen.filiale.name.error.size=Der Name der Filiale darf nicht länger als 50 Zeichen sein.
