Feld für Mobiltelefonnummer beim Kunden hinzugefügt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -110,6 +110,7 @@ kunde.duplikat.error=Der gewählte Kunde und das Duplikat sind identisch. Eine Z
 kunde.duplikat.success=Der gewählte Kundendatensatz (Nummer: {0}) wurde mit dem Duplikat (Nummer: {1}) zusammengeführt.
 kunde.email.error=Die E-Mail-Adresse darf nicht länger als 100 Zeichen sein.
 kunde.firmenname.error=Der Firmenname darf nicht länger als 200 Zeichen sein.
+kunde.mobiltelefon.error=Die Mobiltelefonnummer darf nicht länger als 50 Zeichen sein.
 kunde.nachname.error=Der Nachname darf nicht länger als 100 Zeichen sein.
 kunde.plz.error=Die PLZ darf nicht länger als 8 Zeichen sein.
 kunde.ort.error=Der Ort darf nicht länger als 50 Zeichen sein.
