Ersteller des Reparaturauftrags beim Erstellen wählbar durch Selectbox machen

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -155,6 +155,7 @@ reparatur.geraet.error.size=Der Gerätename darf nicht länger als 500 Zeichen s
 reparatur.geraetepsw.error.size=Der im Feld 'Gerätepasswort' eingetragene Text darf nicht länger als 50 Zeichen sein.
 reparatur.kostenvoranschlag.error.empty=Bitte geben Sie den Kostenvoranschlag an.
 reparatur.kostenvoranschlag.error.size=Der im Feld 'Kostenvoranschlag' eingetragene Text darf nicht länger als 300 Zeichen sein.
+reparatur.mitarbeiter.error.empty=Bitte wählen Sie einen Mitarbeiter aus.
 reparatur.mitarbeiter.error.size=Der Mitarbeitername darf nicht länger als 200 Zeichen sein.
 reparatur.nummer.error.size=Die Auftragsnummer darf nicht länger als 20 Zeichen sein.
 reparatur.save.error=Ungültiger Reparaturauftrag
