Neues Feld beim Kunden 'Bemerkung zur Telefonnummer' hinzugefügt, erscheint auf Reparaturauftrag, Bestellung

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -116,6 +116,7 @@ kunde.plz.error=Die PLZ darf nicht länger als 8 Zeichen sein.
 kunde.ort.error=Der Ort darf nicht länger als 50 Zeichen sein.
 kunde.strasse.error=Die Straße darf nicht länger als 100 Zeichen sein.
 kunde.telefon.error=Die Telefonnummer darf nicht länger als 50 Zeichen sein.
+kunde.telefon.bemerkung.error=Die Bemerkung zur Telefonnummer darf nicht länger als 50 Zeichen sein.
 kunde.vorname.error=Der Vorname darf nicht länger als 50 Zeichen sein.
 kunde.delete.success=Der Kunde wurde erfolgreich gelöscht.
 kunde.save.success=Der Kunde {0} wurde erfolgreich gespeichert.
