Feld Gerät/Zubehör bei Reparaturaufträgen als Pflichtfeld

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -152,6 +152,7 @@ rechnung.save.success=Die Rechnung {0} wurde erfolgreich gespeichert.
 
 reparatur.aufgaben.error.size=Der im Feld 'Aufgaben' eingetragene Text darf nicht länger als 1000 Zeichen sein.
 reparatur.delete.success=Der Reparaturauftrag wurde erfolgreich gelöscht.
+reparatur.geraet.error.empty=Der Gerätename darf nicht leer sein.
 reparatur.geraet.error.size=Der Gerätename darf nicht länger als 500 Zeichen sein.
 reparatur.geraetepsw.error.size=Der im Feld 'Gerätepasswort' eingetragene Text darf nicht länger als 50 Zeichen sein.
 reparatur.kostenvoranschlag.error.empty=Bitte geben Sie den Kostenvoranschlag an.
