MwSt in Einstellungen einstellbar
* MwSt wird je Rechnung und Angebot anhand der aktuellen Einstellung gespeichert für bisherige Fälle 19%
* Einstellung wird berücksichtigt bei Rechnungen, Angeboten und Produkten
* Schaltfläche zum Anpassen aller VK-Netto-Preise aller Produkte hinzugefügt

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,6 +90,7 @@ inventar.produkt.bezeichnung.error.size=Die Bezeichnung des Produktes darf nicht
 inventar.produkt.delete.success=Die Kategorie wurde erfolgreich gelöscht.
 inventar.produkt.ean.error.size=Die EAN darf nicht länger als 100 Zeichen sein.
 inventar.produkt.hersteller.error.size=Der Herstellername darf nicht länger als 100 Zeichen sein.
+inventar.produkt.mwst.save.success=Zu {0} Produkten wurde der VK-Netto-Preis neu berechnet.
 inventar.produkt.save.success=Die Kategorie wurde erfolgreich gespeichert.
 
 kassenbuch.ausgangsbetrag.error=Bitte geben Sie den Ausgangsbetrag an.
