35 - Stornierung und Teilstornierung von Rechnungen ermöglichen

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -148,6 +148,8 @@ rechnung.posten.menge.error.min=Die Menge muss mindestens 1 betragen.
 rechnung.posten.position.error=Die Position des Postens darf nicht kleiner als 1 sein.
 rechnung.posten.seriennummer.error=Die Seriennummer darf maximal 100 Zeichen lang sein.
 rechnung.save.error=Ungültige Rechnung.
+rechnung.storno.delete.success=Die Stornierung {0} wurde erfolgreich gelöscht.
+rechnung.storno.save.success=Die Stornierung {0} wurde erfolgreich gespeichert.
 rechnung.delete.success=Die Rechnung {0} wurde erfolgreich gelöscht.
 rechnung.save.success=Die Rechnung {0} wurde erfolgreich gespeichert.
 
@@ -170,3 +172,5 @@ rolle.beschreibung.error.empty=Bitte geben Sie die Beschreibung an.
 rolle.beschreibung.error.size=Die Beschreibung darf nicht länger als 200 Zeichen sein.
 rolle.name.error.empty=Bitte geben Sie den Namen an.
 rolle.name.error.size=Der Name darf nicht länger als 50 Zeichen sein.
+
+storno.grund.error=Der Grund der Stornierung darf maximal 1.000 Zeichen lang sein.
