Rechnungen als Vorlage speichern zur späteren Weiterbearbeitung oder Kopie

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -165,6 +165,7 @@ reparatur.mitarbeiter.error.size=Der Mitarbeitername darf nicht länger als 200 
 reparatur.nummer.error.size=Die Auftragsnummer darf nicht länger als 20 Zeichen sein.
 reparatur.save.error=Ungültiger Reparaturauftrag
 reparatur.save.success=Der Reparaturauftrag {0} wurde erfolgreich gespeichert.
+reparatur.save.vorlage.success=Die Vorlage wurde erfolgreich zum gewählten Kunden abgelegt.
 reparatur.seriennummer.error.size=Die Seriennummer darf nicht länger als 500 Zeichen sein.
 reparatur.symptome.error.size=Der im Feld 'Symptome' eingetragene Text darf nicht länger als 1000 Zeichen sein.
 
