Neues Feld Zusatztext auf dem Ausdruck auf Rechnungen oder Angeboten ausgeben

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
 angebot.delete.success=Das Angebot wurde erfolgreich gelöscht.
 angebot.save.error=Ungültiges Angebot.
 angebot.save.success=Das Angebot {0} wurde erfolgreich gespeichert.
+angebot.zusatztext.error=Der Zusatztext darf nicht länger als 500 Zeichen sein.
+
 
 bestellung.anzahlung.error.empty=Bitte geben Sie die Höhe der Anzahlung an.
 bestellung.anzahlung.error.size=Der im Feld 'Anzahlung' eingetragene Text darf nicht länger als 300 Zeichen sein.
@@ -152,6 +154,7 @@ rechnung.storno.delete.success=Die Stornierung {0} wurde erfolgreich gelöscht.
 rechnung.storno.save.success=Die Stornierung {0} wurde erfolgreich gespeichert.
 rechnung.delete.success=Die Rechnung {0} wurde erfolgreich gelöscht.
 rechnung.save.success=Die Rechnung {0} wurde erfolgreich gespeichert.
+rechnung.zusatztext.error=Der Zusatztext darf nicht länger als 500 Zeichen sein.
 
 reparatur.aufgaben.error.size=Der im Feld 'Aufgaben' eingetragene Text darf nicht länger als 1000 Zeichen sein.
 reparatur.delete.success=Der Reparaturauftrag wurde erfolgreich gelöscht.
