Rechnungsvorlagen bearbeiten - Kontrollkästchen 'Vorlage nach dem Erstellen der Rechnung behalten' standardmäßig deaktivieren

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -154,6 +154,7 @@ rechnung.storno.delete.success=Die Stornierung {0} wurde erfolgreich gelöscht.
 rechnung.storno.save.success=Die Stornierung {0} wurde erfolgreich gespeichert.
 rechnung.delete.success=Die Rechnung {0} wurde erfolgreich gelöscht.
 rechnung.save.success=Die Rechnung {0} wurde erfolgreich gespeichert.
+rechnung.save.vorlage.success=Die Vorlage wurde erfolgreich zum gewählten Kunden abgelegt.
 rechnung.zusatztext.error=Der Zusatztext darf nicht länger als 500 Zeichen sein.
 
 reparatur.aufgaben.error.size=Der im Feld 'Aufgaben' eingetragene Text darf nicht länger als 1000 Zeichen sein.
@@ -168,7 +169,6 @@ reparatur.mitarbeiter.error.size=Der Mitarbeitername darf nicht länger als 200 
 reparatur.nummer.error.size=Die Auftragsnummer darf nicht länger als 20 Zeichen sein.
 reparatur.save.error=Ungültiger Reparaturauftrag
 reparatur.save.success=Der Reparaturauftrag {0} wurde erfolgreich gespeichert.
-reparatur.save.vorlage.success=Die Vorlage wurde erfolgreich zum gewählten Kunden abgelegt.
 reparatur.seriennummer.error.size=Die Seriennummer darf nicht länger als 500 Zeichen sein.
 reparatur.symptome.error.size=Der im Feld 'Symptome' eingetragene Text darf nicht länger als 1000 Zeichen sein.
 
