--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -161,6 +161,7 @@ reparatur.aufgaben.error.size=Der im Feld 'Aufgaben' eingetragene Text darf nich
 reparatur.delete.success=Der Reparaturauftrag wurde erfolgreich gelöscht.
 reparatur.geraet.error.empty=Der Gerätename darf nicht leer sein.
 reparatur.geraet.error.size=Der Gerätename darf nicht länger als 500 Zeichen sein.
+reparatur.geraetErhalten.success=Der Kunde wurde per E-Mail über den Erhalt des Gerätes informiert.
 reparatur.geraetepsw.error.size=Der im Feld 'Gerätepasswort' eingetragene Text darf nicht länger als 50 Zeichen sein.
 reparatur.kostenvoranschlag.error.empty=Bitte geben Sie den Kostenvoranschlag an.
 reparatur.kostenvoranschlag.error.size=Der im Feld 'Kostenvoranschlag' eingetragene Text darf nicht länger als 300 Zeichen sein.
